manifests/prod/jackett/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jackett-deployment
  namespace: app-jackett
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jackett
  template:
    metadata:
      labels:
        app: jackett
    spec:
      # securityContext:
      #   runAsUser: 2000
      #   runAsGroup: 2000
      #   fsGroup: 2000
      containers:
      - name: jackett
        image: lscr.io/linuxserver/jackett:latest
        ports:
          - containerPort: 9117
            protocol: TCP
        # env:
        # - name: PUID
        #   value: "2000"
        # - name: PGID
        #   value: "2000"
        # - name: TZ
        #   value: "Europe/Warsaw"
        volumeMounts:
        # Host timezone + localtime
        - name: localtime
          mountPath: /etc/localtime
          readOnly: true
        - name: timezone
          mountPath: /etc/timezone
          readOnly: true
        # App specific mounts
        - name: jackett-config
          mountPath: /config
      volumes:
      - name: localtime
        hostPath:
          path: /etc/localtime
          type: File
      - name: timezone
        hostPath:
          path: /etc/timezone
          type: File
      - name: jackett-config
        hostPath:
          path: /opt/configs/jackett-config  # Adjust the path accordingly
  # restartPolicy: Always
