manifests/prod/jackett/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jackett-service
  namespace: app-jackett
spec:
  selector:
    app: jackett
  ports:
  - protocol: TCP
    port: 80
    targetPort: 9117
  type: ClusterIP
